visibility fix 2

--- a/css/main.css
+++ b/css/main.css
@@ -74,7 +74,7 @@ body {
 	font-family: "lora-regular", serif;
 	font-size: 1.7rem;
 	line-height: 3rem;
-	color: #6e6e6e;
+	color: #444444;
 }
 
 /**
@@ -159,7 +159,7 @@ p.lead {
 	font-family: "lora-regular", serif;
 	font-size: 2rem;
 	line-height: 1.8;
-	color: #888888;
+	color: #444444;
 }
 @media only screen and (max-width:768px) {
 	p.lead {
@@ -1039,7 +1039,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {
 .section-intro h1 {
 	font-family: "poppins-semibold", serif;
 	font-size: 3.6rem;
-	color: #FFFF;
+	color: #313131;
 	line-height: 1.25;
 	margin-bottom: 1.2rem;
 }
